# cyberfabric-core

./: CHANGELOG.md  Cargo.toml  SECURITY.md  deny.toml  release-plz.toml
.cypilot/config/: artifacts.toml
.github/workflows/: e2e.yml
apps/hyperspot-server/: Cargo.toml
apps/hyperspot-server/src/: registered_modules.rs
config/: mini-chat.yaml  quickstart.yaml
docs/arch/authorization/: DESIGN.md
docs/plans/: add-integration-tests-for-usage-collector-rest-client-crate.md  add-integration-tests-to-usage-collector-crates.md  analyze-correctness-of-timescaledb-integration-test-fixes-and-align-feature-doc-with-fixed-code.md  implement-e2e-tests-for-usage-collector-with-timescaledb-plugin.md  implement-feature-production-storage-plugin-timescaledb-for-the-usage-collector-gateway.md
docs/plans/completed/: add-integration-tests-for-usage-collector-rest-client-crate.md  analyze-correctness-of-timescaledb-integration-test-fixes-and-align-feature-doc-with-fixed-code.md  implement-feature-production-storage-plugin-timescaledb-for-the-usage-collector-gateway.md
libs/modkit/: Cargo.toml
libs/modkit-db/: Cargo.toml
libs/modkit-odata/src/: lib.rs  odata_filters.rs  odata_parse.rs  odata_parse_tests.rs  page.rs
libs/modkit-transport-grpc/src/: client.rs  rpc_retry.rs
modules/approval-service/docs/: UPSTREAM_REQS.md
modules/chat-engine/docs/: DECOMPOSITION.md
modules/chat_engine/docs/: DESIGN.md  PRD.md
modules/credstore/credstore/: Cargo.toml
modules/credstore/credstore-sdk/: Cargo.toml
modules/file-parser/: Cargo.toml
modules/llm-gateway/docs/: DESIGN.md  PRD.md
modules/mini-chat/: README.md
modules/mini-chat/docs/: openapi.json
modules/system/usage-collector/plugins/noop-usage-collector-storage-plugin/: Cargo.toml  README.md
modules/system/usage-collector/plugins/noop-usage-collector-storage-plugin/src/: config.rs  config_tests.rs  lib.rs  module.rs
modules/system/usage-collector/plugins/noop-usage-collector-storage-plugin/src/domain/: client.rs  client_tests.rs  service.rs
modules/system/usage-collector/usage-collector/: Cargo.toml  README.md
modules/system/usage-collector/usage-collector/src/: config.rs  config_tests.rs  lib.rs  module.rs
modules/system/usage-collector/usage-collector/src/api/rest/: dto.rs  handlers.rs  handlers_tests.rs  routes.rs
modules/system/usage-collector/usage-collector/src/domain/: authz.rs  authz_tests.rs  local_client.rs  local_client_tests.rs  mod.rs
modules/system/usage-collector/usage-collector/tests/: create_record_tests.rs  module_config_tests.rs  query_aggregated_tests.rs  query_raw_tests.rs
modules/system/usage-collector/usage-collector/tests/common/: mod.rs
testing/e2e/: pytest.ini
(+147 files in other folders)
