[package]
name = "cf-usage-collector"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Usage Collector gateway"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["development-tools"]

[lib]
name = "usage_collector"

[lints]
workspace = true

[dependencies]
# Local dependencies
authz-resolver-sdk = { workspace = true }
types-registry-sdk = { workspace = true }
usage-collector-sdk = { workspace = true }
usage-emitter = { workspace = true }

# ModKit dependencies
modkit = { workspace = true }
modkit-db = { workspace = true, features = ["preview-outbox"] }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }
modkit-utils = { workspace = true, features = ["humantime-serde"] }

# REST
axum = { workspace = true }
http = { workspace = true }
utoipa = { workspace = true }

# Data structures
chrono = { workspace = true }
uuid = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# DB
sea-orm-migration = { workspace = true }
