[package]
name = "cf-noop-usage-collector-storage-plugin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "No-op usage-collector storage plugin for development and testing"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["development-tools"]

[lib]
name = "noop_usage_collector_storage_plugin"

[lints]
workspace = true

[dependencies]
# Local dependencies
types-registry-sdk = { workspace = true }
usage-collector-sdk = { workspace = true }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Data structures
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
# ModKit dependencies
modkit-security = { workspace = true }

# Data structures
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }
